# motia

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pnpm-lock.yaml
.github/workflows/: _rust-binary.yml  ci.yml  deploy-website.yml  license-check.yml  release-iii.yml
cli/: Cargo.toml  install.sh
cli/src/: main.rs  telemetry.rs  update.rs
crates/iii-filesystem/: Cargo.toml
crates/iii-filesystem/src/backends/passthroughfs/: builder.rs  create_ops.rs  dir_ops.rs  file_ops.rs  inode.rs  metadata.rs  mod.rs  special.rs
crates/iii-filesystem/tests/: filesystem_integration.rs
crates/iii-init/: Cargo.toml
crates/iii-init/src/: child_exits.rs  fs_handler.rs  lib.rs  main.rs  mount.rs  network.rs  root_pivot.rs  shell_dispatcher.rs  supervisor.rs
crates/iii-init/src/fs_handler/: ops.rs  streaming.rs  tests.rs
crates/iii-init/tests/: init_integration.rs
crates/iii-shell-client/: Cargo.toml
crates/iii-shell-client/src/: lib.rs
crates/iii-shell-client/tests/: fake_fs_relay.rs  fake_relay.rs
crates/iii-shell-proto/: Cargo.toml
crates/iii-shell-proto/src/: lib.rs
crates/iii-supervisor/: Cargo.toml
crates/iii-worker/: Cargo.toml
docs/: changelog.mdx  custom.css  docs.json  index.mdx  install.mdx  quickstart.mdx
docs/advanced/: adapters.mdx  architecture.mdx  custom-modules.mdx  deployment.mdx  telemetry.mdx
docs/api-reference/: sandbox.mdx  sdk-browser.mdx  sdk-node.mdx  sdk-python.mdx  sdk-rust.mdx
docs/architecture/: channels.mdx  engine.mdx  external-workers.mdx  modules.mdx  queues.mdx  trigger-types.mdx
docs/assets/: context7.json
docs/console/: index.mdx
docs/examples/: conditions.mdx  cron.mdx  hello-world.mdx  multi-trigger.mdx  observability.mdx  state-management.mdx  todo-app.mdx
docs/how-to/: configure-engine.mdx  create-custom-trigger-type.mdx  create-ephemeral-worker.mdx  dead-letter-queues.mdx  define-request-response-formats.mdx  developing-sandbox-workers.mdx  expose-http-endpoint.mdx  manage-state.mdx  managing-container-workers.mdx  observability-and-logs.mdx  react-to-state-changes.mdx  reproduce-worker-installs.mdx  schedule-cron-task.mdx  stream-realtime-data.mdx  trigger-actions.mdx  trigger-functions-from-cli.mdx  use-channels.mdx  use-console.mdx  use-functions-and-triggers.mdx  use-http-middleware.mdx  use-iii-in-the-browser.mdx  use-queues.mdx  use-trigger-conditions.mdx  worker-rbac.mdx
docs/modules/: index.mdx  module-bridge.mdx  module-cron.mdx  module-exec.mdx  module-http.mdx  module-observability.mdx  module-pubsub.mdx  module-queue.mdx  module-state.mdx  module-stream.mdx  module-worker.mdx
docs/workers/: iii-state.mdx  iii-stream.mdx  managed-worker-lockfile.mdx
engine/: Cargo.toml  Dockerfile  README.md  config-remote-kv.yaml  config.prod.yaml  config.yaml  docker-compose.prod.yml  docker-compose.yml  install.sh
engine/benches/: concurrent_invocation_bench.rs  control_plane_churn_bench.rs  core_runtime_bench.rs  http_concurrency_loopback_bench.rs  invoke_function_payload_sizes_bench.rs  protocol_serde_bench.rs  pubsub_fanout_bench.rs  startup_bench.rs  state_adapter_bench.rs  trigger_fanout_bench.rs  worker_cleanup_bench.rs  worker_invocation_tracking_bench.rs  ws_roundtrip_bench.rs
engine/examples/: custom_queue_adapter.rs
engine/src/: cli_trigger.rs  function.rs  lib.rs  logging.rs  main.rs  services.rs  telemetry.rs  trigger.rs  update_ops.rs
engine/tests/: config_reload_e2e.rs  dlq_redrive_e2e.rs  external_known_sandbox.rs  http_middleware_e2e.rs  invocation_extensibility.rs  queue_e2e_concurrency_resilience.rs  queue_e2e_failure_retry.rs  queue_e2e_fanout.rs  queue_e2e_happy_path.rs  queue_integration.rs  rabbitmq_queue_integration.rs  reload_diff_unit.rs  reload_manager_unit.rs  reload_scope_unit.rs
frameworks/motia/: MIGRATION_GUIDE.md
sdk/: README.md
sdk/fixtures/: config-bridge-backend.yaml  config-bridge.yaml  config-test.yaml
skills/: LICENSE  README.md  SKILLS.md
skills/iii-browser-sdk/: SKILL.md
skills/iii-channels/: SKILL.md
skills/iii-cron-scheduling/: SKILL.md
skills/iii-custom-triggers/: SKILL.md
skills/iii-dead-letter-queues/: SKILL.md
skills/iii-effect-system/: SKILL.md
skills/iii-engine-config/: SKILL.md
skills/iii-event-driven-cqrs/: SKILL.md
skills/iii-functions-and-triggers/: SKILL.md
skills/iii-getting-started/: SKILL.md
skills/iii-http-endpoints/: SKILL.md
skills/iii-http-invoked-functions/: SKILL.md
skills/iii-http-middleware/: SKILL.md
skills/iii-low-code-automation/: SKILL.md
skills/iii-node-sdk/: SKILL.md
skills/iii-observability/: SKILL.md
skills/iii-python-sdk/: SKILL.md
skills/iii-queue-processing/: SKILL.md
skills/iii-realtime-streams/: SKILL.md
skills/iii-rust-sdk/: SKILL.md
skills/iii-state-management/: SKILL.md
skills/iii-state-reactions/: SKILL.md
skills/iii-trigger-actions/: SKILL.md
skills/iii-trigger-conditions/: SKILL.md
skills/iii-workflow-orchestration/: SKILL.md
skills/references/: agentic-backend.js  channels.js  channels.py  channels.rs  cron-scheduling.js  cron-scheduling.py  cron-scheduling.rs  custom-triggers.js  custom-triggers.py  custom-triggers.rs  dead-letter-queues.js  dead-letter-queues.py  dead-letter-queues.rs  effect-system.js  event-driven-cqrs.js  functions-and-triggers.js  functions-and-triggers.py  functions-and-triggers.rs  http-endpoints.js  http-endpoints.py  http-endpoints.rs  http-invoked-functions.js  http-invoked-functions.py  http-invoked-functions.rs  http-middleware.js  iii-config.yaml  observability.js  (+23 more)
website/: .gitignore  AGENTS.md  globals.css  index.html  llms.txt  manifesto.html  og-image.xcf  package.json  robots.txt  sitemap.xml  vercel.json
(+240 files in other folders)
