[package]
name = "iii-cli"
version = "0.2.5"
edition = "2021"
description = "Unified CLI dispatcher for iii-engine tools"
license = "Apache-2.0"

[[bin]]
name = "iii-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-std", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
zip = "2"
dirs = "6"
sha2 = "0.10"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
