[package]
name = "iii-init"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
description = "PID 1 init binary for iii microVM workers"

[lib]
name = "iii_init"
path = "src/lib.rs"

[[bin]]
name = "iii-init"
path = "src/main.rs"

[dependencies]
nix = { version = "0.31", features = ["mount", "signal", "process", "fs", "term"] }
libc = "0.2"
thiserror = "2"
# Supervisor library: provides Config/State/Request/Response/control::serve used
# by the "supervisor mode" path inside exec_worker when III_CONTROL_PORT is set.
# Sync-only; no tokio. Cross-compiles cleanly to linux-musl (same target as init).
iii-supervisor = { path = "../iii-supervisor" }
# Needed for the blocking control loop inside supervisor mode.
anyhow = "1"
# Shell-channel stdout/stderr/stdin frames carry bytes as base64 inside
# JSON. `0.22` matches the engine's version so cargo resolves one copy.
base64 = "0.22"

[dev-dependencies]
# Used by root_pivot's unit tests to build a fake rootfs under a
# tempdir and exercise enumerate_rootfs_entries without Linux mount
# privileges.
tempfile = "3"
