[package]
name = "iii-shell-proto"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
publish = false
description = "Wire protocol for the iii shell-exec channel: frame codec, ShellMessage types, and constants. Consumed by iii-supervisor (re-export), iii-init (guest dispatcher), and iii-shell-client (host async client)."

[lib]
name = "iii_shell_proto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
